# ktc

./: .gitignore  Cargo.toml  LICENSE  README.md  example.config.toml
crates/ktc/: Cargo.toml
crates/ktc-common/: Cargo.toml
crates/ktc-common/src/: color.rs  font.rs  font5x7.raw  ipc.rs  lib.rs  logging.rs  paths.rs
crates/ktc/src/: config.rs  input.rs  ipc.rs  logging.rs  main.rs  renderer.rs  session.rs  state.rs  vulkan_renderer.rs
crates/ktc/src/protocols/: compositor.rs  data_device.rs  dmabuf.rs  layer_shell.rs  mod.rs  output.rs  output_management.rs  screencopy.rs  seat.rs  subcompositor.rs  xdg_decoration.rs  xdg_output.rs  xdg_shell.rs
crates/ktc/src/shaders/: color.frag  color.frag.spv  quad.vert  quad.vert.spv  texture.frag  texture.frag.spv
crates/ktcbar/: Cargo.toml
crates/ktcbar/src/: main.rs
src/: config.rs  input.rs  logging.rs  main.rs  renderer.rs  session.rs  state.rs
src/protocols/: compositor.rs  dmabuf.rs  mod.rs  output.rs  output_management.rs  screencopy.rs  seat.rs  subcompositor.rs  xdg_decoration.rs  xdg_output.rs  xdg_shell.rs
