[package]
name = "ktc"
version = "0.1.0"
edition = "2021"

[dependencies]
wayland-server = "0.31"
wayland-protocols = { version = "0.32", features = ["server", "unstable"] }
wayland-protocols-wlr = { version = "0.3", features = ["server"] }
calloop = "0.14"
libc = "0.2"
nix = { version = "0.29", features = ["fs", "ioctl", "mman"] }
drm = "0.14"
drm-ffi = "0.9"
drm-fourcc = "2.2"
gbm = { version = "0.15", features = ["drm-support"] }
gbm-sys = "0.3"
khronos-egl = { version = "6.0", features = ["dynamic"] }
glow = "0.16"
input = { version = "0.9", features = ["libinput_1_21"] }
xkbcommon = "0.8"
log = "0.4"
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
