[package]
name = "ktc-common"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Shared utilities for KTC ecosystem"

[dependencies]
log.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json = "1.0"
toml.workspace = true
libc.workspace = true
